<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".AddProfile">

    <ScrollView
        android:id="@+id/profile_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/default_profile_picture"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/default_profile_picture" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_surname"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/event_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="Повар"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/edit"/>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/edit_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/choose_image_button"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/round_profile_back"
                android:src="@drawable/default_profile_picture"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/default_profile_picture" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namePole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionPole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/agePole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:id="@+id/isCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:text="@string/i_am_a_creator" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>